Added in new pd-cards-16

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -714,7 +714,8 @@
                             <p class="pd-cards-11-headline"><strong>WordPress Solutions</strong></p>
                         </header>
                         <p class="pd-cards-11-leading-para">We know how many of our clients love WordPress so we&rsquo;ve worked hard to get the best high performance solutions for you.</p>
-                        <footer class="pd-cards-11-footer"><a href="#" name="anchor" class="mb-4 pd-cards-11-btn"><span></span>Explore WordPress</a>
+                        <footer class="pd-cards-11-footer">
+                            <a href="#" name="anchor" class="mb-4 pd-cards-11-btn"><span></span>Explore WordPress</a>
                             <div class="pd-cards-11-sub-cards-outer">
                                 <article class="mb-3 pd-cards-11-card text-start"><a href="#" name="anchor" class="mb-2 pd-cards-11-card-svg-link pt-2"><img alt="bricks builder logo" width="40" height="40" loading="lazy" src="images/design-assets/bricks-logo.svg"></a>
                                     <h3>Bricks</h3>
@@ -1120,7 +1121,55 @@
                                 <p>Pellentesque eleifend rhoncus congue. Donec iaculis turpis consequat lectus consequat, et eleifend risus volutpat.</p>
                             </div>
                         </div>
-                        <div data-empty-placeholder></div>                                                  
+                        <div class="pd-cards-16-cards-outer">
+                            <article class="pd-cards-16-card">
+                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                                        <source srcset="images/uploads/cards-sample-1.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-1.jpg" alt="image of an app" loading="lazy">
+                                    </picture></a>
+                                <div class="pd-cards-16-card-content">
+                                    <p>In hendrerit sapien fermentum ligula sagittis sagittis. Vestibulum et lorem nisi. Pellentesque orci turpis, mollis at neque et, elementum </p>
+                                </div>
+                                <footer class="pd-cards-16-card-footer"><a href="#" name="anchor">Read</a>
+                                </footer>
+                                <div class="pd-cards-16-logo-outer">
+                                    <img src="images/uploads/logo-testimonial-example-1.svg" alt="example logo 1" width="130" height="130" loading="lazy">
+                                </div>
+                            </article>
+                            <article class="pd-cards-16-card">
+                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                                        <source srcset="images/uploads/cards-sample-2.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-2.jpg" alt="image of an app" loading="lazy">
+                                    </picture></a>
+                                <div class="pd-cards-16-card-content">
+                                    <p>In hendrerit sapien si. Pellentesque orci turpis, mollis at neque et, elementum</p>
+                                </div>
+                                <footer class="pd-cards-16-card-footer"><a href="#" name="anchor">Read</a>
+                                </footer>
+                                <div class="pd-cards-16-logo-outer">
+                                    <img alt="example logo 1" width="130" src="images/uploads/logo-testimonial-example-2.svg" height="130" loading="lazy">
+                                </div>
+                            </article>
+                            <article class="pd-cards-16-card">
+                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                                        <source srcset="images/uploads/cards-sample-3.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-3.jpg" alt="image of an app" loading="lazy">
+                                    </picture></a>
+                                <div class="pd-cards-16-card-content">
+                                    <p>In hendrerit sapien fermentum ligula sagittis sagittis. Vestibulum et lorem nisi. Pellentesque orci turpis, mollis at neque et, elementum. Nunc sed metus vulputate purus fermentum.</p>
+                                </div>
+                                <footer class="pd-cards-16-card-footer"><a href="#" name="anchor">Read</a>
+                                </footer>
+                                <div class="pd-cards-16-logo-outer">
+                                    <img alt="example logo 1" width="130" src="images/uploads/logo-testimonial-example-6.svg" height="130" loading="lazy">
+                                </div>
+                            </article>
+                        </div>
+                        <footer class="pd-cards-16-footer">
+                            <a href="#" name="anchor" class="pd-btn pd-inverted"><span><svg xmlns="http://www.w3.org/2000/svg" class="pd-icon" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                                        <path d="M280-280h280v-80H280v80Zm0-160h400v-80H280v80Zm0-160h400v-80H280v80Zm-80 480q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"/>
+                                    </svg></span>Read all Case Studies</a>
+                        </footer>                         
                     </div>
                 </div>
             </div>
