Added in pd-section-20 and tidied pd-section-19

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -776,7 +776,7 @@
         <article class="pb-5 pd-section-19 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 pb-5 pt-5">
+                    <div class="col-lg-6 order-1 order-lg-0 pb-5 pb-lg-5 pt-4 pt-lg-5">
                         <header>
                             <h2 class="pd-intro-heading-sm">Case Study</h2>
                             <img class="pd-section-19-logo-img" src="images/uploads/logo-testimonial-example-b-w-1.svg" alt="example logo" width="100" height="136" loading="lazy">
@@ -828,13 +828,13 @@
                                     </svg></span>Read the Case Study</a>
                         </footer>                         
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 order-0 order-lg-1 pe-0 pe-lg-auto ps-0 ps-lg-auto">
                         <div class="pd-section-19-hero-img-outer">
                             <picture>
                                 <source srcset="images/uploads/sections-sample-healthcare.webp" type="image/webp">
                                 <img src="images/uploads/sections-sample-healthcare.jpg">
                             </picture>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -842,6 +842,60 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-20</p>
+            </div>
+        </section>
+        <article class=" pd-section-20">
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col-12 col-lg-4 order-1 order-lg-0 p-4">
+                        <header>
+                            <h2 class="pd-intro-heading-sm">Case Study</h2>
+                            <div class="pd-headline">
+                                <p>Acme Utils Ltd</p>
+                            </div>
+                        </header>
+                        <div class="pd-subHeadline">
+                            <p>Reducing <em>carbon footprint</em>, reducing <em>costs</em>.</p>
+                        </div>
+                        <p class="pd-section-20-results-txt">Outputs</p>
+                        <div class="pd-section-20-grid-outer">
+                            <div class="pd-section-20-grid">
+                                <div class="pd-section-20-grid-card">
+                                    <div class="pd-section-20-card-headline">
+                                        <p>15%</p>
+                                    </div>
+                                    <div class="pd-section-20-card-subHeadline">
+                                        <p>Less Waste</p>
+                                    </div>
+                                </div>
+                                <div class="pd-section-20-grid-card">
+                                    <div class="pd-section-20-card-headline">
+                                        <p>8%</p>
+                                    </div>
+                                    <div class="pd-section-20-card-subHeadline">
+                                        <p>Savings</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <footer class="pb-2 pt-2">
+                            <a href="#" name="anchor" class="pd-btn">Read Case Study</a>
+                        </footer>                         
+                    </div>
+                    <div class="col-12 col-lg-8 order-0 order-lg-1 pe-0 ps-0">
+                        <div class="pd-section-20-hero-img-outer">
+                            <picture>
+                                <source srcset="images/uploads/hero-people-at-work.webp" type="image/webp">
+                                <img src="images/uploads/hero-people-at-work.jpg">
+                            </picture>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </article>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-21</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
