Added in pd-section 21 start

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -898,6 +898,33 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-21</p>
             </div>
         </section>
+        <section class="pb-5 pd-section-21 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-5">
+                        <header>
+                            <h2 class="pd-intro-heading-sm">What We Do</h2>
+                            <div class=" pd-headline">
+                                <p>Improving <em>effectiveness, reducing costs,</em>  helping you <em>scale...</em></p>
+                            </div>
+                            <div class="pd-subHeadline pt-2">
+                                <p>Maecenas convallis congue est, non tincidunt ligula aliquam auctor. <em>Curabitur scelerisque malesuada</em> magna, ac volutpat nunc volutpat vitae. Integer enim nisi, eleifend id <em>posuere vel</em>, lobortis ut quam. Sed at consequat mauris, eu consequat metus.&nbsp;</p>
+                            </div>
+                            <footer class="pt-3">
+                                <a href="#" name="anchor" class="pd-btn">Contact Us</a>
+                            </footer>
+                        </header>                                                  
+                    </div>
+                    <div class="col-12 col-lg-7">                          
+</div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-22</p>
+            </div>
+        </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
