--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -903,7 +903,7 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-21</p>
             </div>
         </section>
-        <section class="pb-5 pd-section-21 pt-5">
+        <section class="pb-5 pd-section-21 pt-5" id="section21-a">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-5 pb-4 pb-lg-0">
@@ -920,9 +920,8 @@
                         </header>                         
                     </div>
                     <div class="col-12 col-lg-7">
-                        <div class="pd-section-21-list-outer">
-                            <article class="pd-section-21-card" aria-expanded="false">
-                                <a class="pd-section-21-card-btn"> <div class="pd-section-21-card-label">Business & Technology Consulting<span>Lorem Aenean in risus vitae turpis vulputate pulvinar at quis magna</span>
+                        <div class="pd-section-21-list-outer ps-lg-5">
+                            <article class="pd-section-21-card" aria-expanded="false"><a class="pd-section-21-card-btn"> <div class="pd-section-21-card-label">Business & Technology Consulting<span>Lorem Aenean in risus vitae turpis vulputate pulvinar at quis magna</span>
                                     </div> <div class="pd-section-21-card-toggle">
                                         <div class="pd-section-21-open-close-horizontal"></div>
                                         <div class="pd-section-21-open-close-vertical"></div>
@@ -1113,5 +1112,6 @@
         </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/functions-sections.js"></script>
     </body>
 </html>
