--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -1182,12 +1182,12 @@
             <div class="pd-cards-17-background-img-outer">
                 <figure>
                     <picture>
-                        <source srcset="/images/uploads/unsplash-monocot-stem_result.webp 1800w, 
-                                /images/uploads/unsplash-monocot-stem_result_mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
-                        <img srcset="/images/uploads/unsplash-monocot-stem_result.jpg 1800w,
-                            /images/uploads/unsplash-monocot-stem_result_mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/unsplash-monocot-stem_result.jpg" class="pd-hero-16-img" onload="imageLoadedListener16()" loading="lazy"/>
+                        <source srcset="/images/uploads/hero-unsplash-insect_result.webp 1800w, 
+                                /images/uploads/hero-unsplash-insect_result_mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                        <img srcset="/images/uploads/hero-unsplash-insect_result.jpg 1800w,
+                            /images/uploads/hero-unsplash-insect_result_mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-unsplash-insect_result.jpg" class="pd-hero-16-img" onload="imageLoadedListener16()" loading="lazy" alt="image of ants head" width="1265" height="1659"/>
                     </picture>
-                    <figcaption>[ <em>Image:</em>&nbsp;Perennial Monocot Stem ]
+                    <figcaption>[ <em>Image:</em>&nbsp;Ant&apos;s Head ]
                     </figcaption>                     
                 </figure>
                 <div data-empty-placeholder class="pd-cards-17-img-overlay"></div>
