Added in beginnings of Grid 4

--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -27,8 +27,7 @@
                         <p class="pd-grid-1-subHeadline">View a snapshot of some of our work. We&apos;ve created performant, quality websites and apps.</p> 
                     </header>
                     <div class="col-12 pe-0 pe-xl-2 ps-0 ps-xl-2">
-                        <div class="pd-grid-1-grid-outer">
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-1"><article>
+                        <div class="pd-grid-1-grid-outer"><a href="#" class="pd-grid-1-item pd-grid-1-item-1"><article>
                                     <picture>
                                         <source srcset="/images/uploads/blog-post-1.webp" type="image/webp"/>
                                         <img src="/images/uploads/blog-post-1.jpg" class="pd-grid-1-image" alt="image of beach app" loading="lazy"/>
@@ -41,8 +40,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">We&apos;re just about to launch an exciting app for iOS and Android</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-2"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-2"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-coast-1000x1000.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-coast-1000x1000.jpg" class="pd-grid-1-image" alt="image of coastline" loading="lazy"/>
@@ -55,8 +53,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">We built a new perfomant website for international artist Naomi Jenkin.</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-3"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-3"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-scissors-people-working.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-scissors-people-working.jpg" class="pd-grid-1-image" alt="image for hero" loading="lazy"/>
@@ -69,8 +66,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Scientific Services needed a new website to support its ambitious growth objectives.</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-4"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-4"><article>
                                     <picture>
                                         <source srcset="/images/uploads/hero-testimonials.webp" type="image/webp"/>
                                         <img src="/images/uploads/hero-testimonials.jpg" class="pd-grid-1-image" alt="image for hero" loading="lazy"/>
@@ -83,8 +79,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Pendigital built Jewell Construction&apos;s new website...</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-5"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-5"><article>
                                     <picture>
                                         <source srcset="/images/uploads/sections-sample-healthcare.webp" type="image/webp"/>
                                         <img src="/images/uploads/sections-sample-healthcare.jpg" class="pd-grid-1-image" alt="image for healthcare" loading="lazy"/>
@@ -97,8 +92,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Our cost simulator and game helps clinicians save money and recycle more...</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-6"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-6"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-1.jpg" class="pd-grid-1-image" alt="image for membership website" loading="lazy"/>
@@ -111,8 +105,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">A new subscription based website for Club Roy</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-7"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-7"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-3.jpg" class="pd-grid-1-image" alt="image for games case study" loading="lazy"/>
@@ -125,8 +118,7 @@
                                         </header>
                                         <p class="pd-grid-1-item-subPara">Fun and simple to use, helping children to learn their phonics.</p>
                                     </div>
-                                </article> </a>
-                            <a href="#" class="pd-grid-1-item pd-grid-1-item-8"><article>
+                                </article> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-8"><article>
                                     <picture>
                                         <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
                                         <img src="/images/uploads/cards-sample-2.jpg" class="pd-grid-1-image" alt="image for html5 game" loading="lazy"/>
@@ -142,8 +134,7 @@
                                 </article> </a>
                         </div>                         
                     </div>
-                    <footer class="col-12 pt-4 text-center">
-                        <a href="#" name="anchor" class="pd-grid-1-btn">View more</a> 
+                    <footer class="col-12 pt-4 text-center"><a href="#" name="anchor" class="pd-grid-1-btn">View more</a> 
                     </footer>
                 </div>
             </div>
@@ -385,8 +376,7 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <source srcset="/images/uploads/youtube_slide_result.webp" type="image/webp">
                                     <img src="images/uploads/youtube_slide_result.jpg">
                                 </picture>
-                                <div data-empty-placeholder class="pd-grid-3-card-overlay"></div>
-                                <a href="#" name="anchor"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                                <div data-empty-placeholder class="pd-grid-3-card-overlay"></div><a href="#" name="anchor"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
                                         <path d="M390-318.46 641.54-480 390-641.54v323.08ZM480.07-100q-78.84 0-148.21-29.92t-120.68-81.21q-51.31-51.29-81.25-120.63Q100-401.1 100-479.93q0-78.84 29.92-148.21t81.21-120.68q51.29-51.31 120.63-81.25Q401.1-860 479.93-860q78.84 0 148.21 29.92t120.68 81.21q51.31 51.29 81.25 120.63Q860-558.9 860-480.07q0 78.84-29.92 148.21t-81.21 120.68q-51.29 51.31-120.63 81.25Q558.9-100 480.07-100Zm-.07-60q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/>
                                     </svg></a>
                             </div>
@@ -403,7 +393,8 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <div>
                                         <p>Donec eleifend tristique leo eget sollicitudin.&nbsp;</p>
                                     </div>
-                                    <footer><a href="#" name="anchor">Read 3D Printing Guide</a>
+                                    <footer>
+                                        <a href="#" name="anchor">Read 3D Printing Guide</a>
                                     </footer>
                                 </div>
                             </div>
@@ -420,7 +411,8 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <div>
                                         <p>Etiam consectetur sapien id rutrum fermentum Cras vel ligula sed enim interdum sodales vitae at velit.&nbsp;</p>
                                     </div>
-                                    <footer><a href="#" name="anchor">Read Low Cost</a>
+                                    <footer>
+                                        <a href="#" name="anchor">Read Low Cost</a>
                                     </footer>
                                 </div>
                             </div>
@@ -437,7 +429,8 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <div>
                                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida.</p>
                                     </div>
-                                    <footer><a href="#" name="anchor">Read High Performing</a>
+                                    <footer>
+                                        <a href="#" name="anchor">Read High Performing</a>
                                     </footer>
                                 </div>
                             </div>
@@ -454,7 +447,8 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <div>
                                         <p>Mauris fringilla gravida nisl, a laoreet turpis convallis quis.&nbsp;</p>
                                     </div>
-                                    <footer><a href="#" name="anchor">Read Easily Extendable</a>
+                                    <footer>
+                                        <a href="#" name="anchor">Read Easily Extendable</a>
                                     </footer>
                                 </div>
                             </div>
@@ -471,7 +465,8 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                                     <div>
                                         <p>Nulla vitae turpis porttitor, blandit orci in, vehicula libero.</p>
                                     </div>
-                                    <footer><a href="#" name="anchor">Read Adaptability</a>
+                                    <footer>
+                                        <a href="#" name="anchor">Read Adaptability</a>
                                     </footer>
                                 </div>
                             </div>
@@ -479,10 +474,10 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 d-flex flex-row flex-wrap justify-content-center pt-4">
-                        <a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                    <div class="col-12 d-flex flex-row flex-wrap justify-content-center pt-4"><a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
                                     <path d="M480-328.46 309.23-499.23l42.16-43.38L450-444v-336h60v336l98.61-98.61 42.16 43.38L480-328.46ZM252.31-180Q222-180 201-201q-21-21-21-51.31v-108.46h60v108.46q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-108.46h60v108.46Q780-222 759-201q-21 21-51.31 21H252.31Z"/>
-                                </svg></span>Download</a><a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                                </svg></span>Download</a>
+                        <a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
                                     <path d="M327.69-453.85h304.62v-60H327.69v60Zm0 115.39h304.62v-60H327.69v60Zm0 115.38h184.62v-60H327.69v60ZM252.31-100Q222-100 201-121q-21-21-21-51.31v-615.38Q180-818 201-839q21-21 51.31-21H570l210 210v477.69Q780-142 759-121q-21 21-51.31 21H252.31ZM540-620v-180H252.31q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46v615.38q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46V-620H540ZM240-800v180-180V-160v-640Z"/>
                                 </svg></span>Documentation</a> 
                     </div>
@@ -492,6 +487,19 @@ It&rsquo;s really powerful to ask yourself what you think you know versus what y
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-grid-4</p>
+            </div>
+        </section>
+        <section class="pd-grid-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">                          
+</div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-grid-5</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
