--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -1314,7 +1314,7 @@
                             <div class="pd-cards-17-grid-card">
                                 <a name="anchor" href="#"><img alt="blockly logo" width="100" height="60" src="images/design-assets/logo-blockly.svg" loading="lazy"></a>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -1325,6 +1325,232 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-18</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-18 pd-padding-bottom-lg pd-padding-top-lg pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <header>
+                            <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#c5247f">
+                                    <path d="M60.39-172.31v-150q0-29 19.65-49.11 19.65-20.12 47.65-20.89H251q18.08 0 34.35 8.85 16.26 8.85 26.5 24.69 29.76 40.92 73.8 63.69 44.04 22.77 94.35 22.77 50.92 0 95.15-22.77 44.24-22.77 73.39-63.69 11.46-15.84 27.42-24.69 15.96-8.85 33.04-8.85h123.31q28.61.77 48.15 20.89Q900-351.31 900-322.31v150H640v-94.08q-34.23 26.16-74.92 40.12-40.7 13.96-85.08 13.96-43.38 0-84.19-14.08-40.81-14.07-75.43-40.23v94.31H60.39ZM480-327.69q-36.08 0-68.35-16.73-32.26-16.73-54.11-46.2-15.46-22.3-37.69-36.42-22.23-14.11-48.39-17.19 25.46-31.23 88.96-48.5Q423.92-510 480-510t119.58 17.27q63.5 17.27 89.34 48.5-25.54 3.08-48.07 17.19-22.54 14.12-38 36.42-20.85 30.47-53.31 46.7-32.46 16.23-69.54 16.23Zm-308.46-120q-45.38 0-77.69-32.31-32.31-32.31-32.31-77.69 0-46.39 32.31-78.19 32.31-31.81 77.69-31.81 46.38 0 78.19 31.81 31.81 31.8 31.81 78.19 0 45.38-31.81 77.69-31.81 32.31-78.19 32.31Zm616.92 0q-45.38 0-77.69-32.31-32.31-32.31-32.31-77.69 0-46.39 32.31-78.19 32.31-31.81 77.69-31.81 46.38 0 78.19 31.81 31.81 31.8 31.81 78.19 0 45.38-31.81 77.69-31.81 32.31-78.19 32.31ZM480-567.69q-45.38 0-77.69-32.31Q370-632.31 370-677.69q0-46.39 32.31-78.19 32.31-31.81 77.69-31.81 46.38 0 78.19 31.81Q590-724.08 590-677.69q0 45.38-31.81 77.69-31.81 32.31-78.19 32.31Z"></path>
+                                </svg>
+                                <h2 class="pd-intro- pd-intro-heading-sm">Community</h2>
+                            </div>
+                            <div class=" pd-headline">
+                                <p>Meet the Community</p>
+                            </div>
+                            <!-- <div class="pd-subHeadline pt-2">
+    <p>Maecenas convallis congue est, non tincidunt ligula aliquam auctor. <em>Curabitur scelerisque malesuada</em> magna, ac volutpat nunc volutpat vitae. Integer enim nisi, eleifend id <em>posuere vel</em>, lobortis ut quam. Sed at consequat mauris, eu consequat metus.&nbsp;</p>
+</div> -->
+                            <!-- <footer class="pt-3"><a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                <path d="M480-328.46 309.23-499.23l42.16-43.38L450-444v-336h60v336l98.61-98.61 42.16 43.38L480-328.46ZM252.31-180Q222-180 201-201q-21-21-21-51.31v-108.46h60v108.46q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-108.46h60v108.46Q780-222 759-201q-21 21-51.31 21H252.31Z"/>
+            </svg></span>Download</a><a href="#" name="anchor" class="pd-btn"><span><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#555555">
+                <path d="M327.69-453.85h304.62v-60H327.69v60Zm0 115.39h304.62v-60H327.69v60Zm0 115.38h184.62v-60H327.69v60ZM252.31-100Q222-100 201-121q-21-21-21-51.31v-615.38Q180-818 201-839q21-21 51.31-21H570l210 210v477.69Q780-142 759-121q-21 21-51.31 21H252.31ZM540-620v-180H252.31q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46v615.38q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46V-620H540ZM240-800v180-180V-160v-640Z"/>
+            </svg></span>Documentation</a>
+</footer> -->
+                        </header>                         
+                    </div>
+                </div>
+                <div class="pt-4 row">
+                    <div class="col-lg-6 d-flex flex-column pb-3">
+                        <article class="pd-cards-18-card-lg-outer">
+                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                    <source srcset="/images/uploads/case-study-tanzania_result.webp" type="image/webp">
+                                    <img src="images/uploads/case-study-tanzania_result.jpg" alt="tanazania case study" width="269" height="198" loading="lazy">
+                                </picture></a>
+                            <div class="pd-cards-18-card-content-outer">
+                                <header>
+                                    <p>Tanzania</p>
+                                    <h3>Accelerating Malaria Studies&nbsp;</h3>
+                                </header>
+                                <footer>
+                                    <a href="#" name="anchor">Read</a>
+                                </footer>
+                            </div>
+                        </article>                         
+                    </div>
+                    <div class="col-lg-6 d-flex flex-column pb-3">
+                        <article class="pd-cards-18-card-lg-outer">
+                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                    <source srcset="/images/uploads/case-study-argentina_result.webp" type="image/webp">
+                                    <img src="images/uploads/case-study-argentina_result.jpg" alt="plants growing" width="269" height="198" loading="lazy" aria-label="View article">
+                                </picture></a>
+                            <div class="pd-cards-18-card-content-outer">
+                                <header>
+                                    <p>Argentina</p>
+                                    <h3>Assessing Soil Health With Farmers</h3>
+                                </header>
+                                <footer>
+                                    <a href="#" name="anchor">Read</a>
+                                </footer>
+                            </div>
+                        </article>                         
+                    </div>
+                    <div class="col-lg-6 d-flex flex-column pb-3">
+                        <article class="pd-cards-18-card-lg-outer">
+                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                    <source srcset="/images/uploads/case-study-usa_result.webp" type="image/webp">
+                                    <img src="images/uploads/case-study-usa_result.jpg" width="269" height="198" loading="lazy" alt="USA lab" aria-label="View article">
+                                </picture></a>
+                            <div class="pd-cards-18-card-content-outer">
+                                <header>
+                                    <p>USA &amp; Honduras</p>
+                                    <h3>Enabling Digital Pathology For Global Health</h3>
+                                </header>
+                                <footer>
+                                    <a href="#" name="anchor">Read</a>
+                                </footer>
+                            </div>
+                        </article>                         
+                    </div>
+                    <div class="col-lg-6 d-flex flex-column pb-3">
+                        <article class="pd-cards-18-card-lg-outer">
+                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" aria-label="View article"> <picture>
+                                    <source srcset="/images/uploads/case-study-ireland_result.webp" type="image/webp">
+                                    <img src="images/uploads/case-study-ireland_result.jpg" width="269" height="198" loading="lazy" alt="plastic on beach" aria-label="View article">
+                                </picture></a>
+                            <div class="pd-cards-18-card-content-outer">
+                                <header>
+                                    <p>Ireland</p>
+                                    <h3>Measuring Microplastics Everywhere</h3>
+                                </header>
+                                <footer>
+                                    <a href="#" name="anchor">Read</a>
+                                </footer>
+                            </div>
+                        </article>                         
+                    </div>
+                </div>
+                <footer class="row">
+                    <div class="col-12 d-flex flex-row flex-wrap justify-content-start pt-4"><a href="#" class="pd-btn pd-btn-dark"><span class="pd-icon"><img alt="search icon" width="40" height="40" loading="lazy" src="images/design-assets/forum_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg"></span><span class="pd-icon pd-icon-rollover"><img alt="search icon" width="40" height="40" loading="lazy" src="images/design-assets/forum_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg"></span>Forum</a><a href="#" class="pd-btn pd-btn-dark"><span class="pd-icon"><img alt="search icon" width="40" height="40" loading="lazy" src="images/design-assets//search_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg"></span><span class="pd-icon pd-icon-rollover"><img src="images/design-assets/search_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span>View More</a> 
+                    </div>
+                </footer>
+            </div>
+            <div class="pd-brand-side">
+                <img src="images/design-assets/logo_openflexure_emblem.svg" alt="openflexure emblem" width="80" loading="lazy" height="50">
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-19</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-19 pt-5">
+            <div class="container">
+                <div class="pb-3 row">
+                    <div class="col-12 col-lg-9">
+                        <header>
+                            <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#c5247f">
+                                    <path d="M320-603.85q15.08 0 25.62-10.53 10.53-10.54 10.53-25.62 0-15.08-10.53-25.62-10.54-10.53-25.62-10.53-15.08 0-25.62 10.53-10.53 10.54-10.53 25.62 0 15.08 10.53 25.62 10.54 10.53 25.62 10.53Zm0 160q15.08 0 25.62-10.53 10.53-10.54 10.53-25.62 0-15.08-10.53-25.62-10.54-10.53-25.62-10.53-15.08 0-25.62 10.53-10.53 10.54-10.53 25.62 0 15.08 10.53 25.62 10.54 10.53 25.62 10.53Zm0 160q15.08 0 25.62-10.53 10.53-10.54 10.53-25.62 0-15.08-10.53-25.62-10.54-10.53-25.62-10.53-15.08 0-25.62 10.53-10.53 10.54-10.53 25.62 0 15.08 10.53 25.62 10.54 10.53 25.62 10.53ZM212.31-140Q182-140 161-161q-21-21-21-51.31v-535.38Q140-778 161-799q21-21 51.31-21h419.23L820-631.54v419.23Q820-182 799-161q-21 21-51.31 21H212.31Zm0-60h535.38q5.39 0 8.85-3.46t3.46-8.85V-600H600v-160H212.31q-5.39 0-8.85 3.46t-3.46 8.85v535.38q0 5.39 3.46 8.85t8.85 3.46ZM200-760v160-160V-200v-560Z"/>
+                                </svg>
+                                <h2 class="pd-intro- pd-intro-heading-sm">Summary</h2>
+                            </div>
+                            <p class="pd-headline">Lorem Ipsum</p>
+                        </header>
+                        <div>
+                            <p class="pd-subHeadline">The OpenFlexure Microscope is an open-source, 3D printed, high-performance robotic microscope that is being built and used across the world by our global community.</p>
+                        </div>                         
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="pd-cards-19-grid-outer">
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Mauris Laoreet</h3>
+                                    </header>
+                                    <div>
+                                        <p>Dapibus commodo enim, eget malesuada ante tristique.</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Pretium Ipsum Bibendum</h3>
+                                    </header>
+                                    <div>
+                                        <p>Mauris fringilla gravida nisl, a laoreet turpis convallis quis.&nbsp;</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Class Aptent</h3>
+                                    </header>
+                                    <div>
+                                        <p>Praesent vestibulum bibendum suscipit. Nulla facilisi. Vivamus facilisis, arcu ac auctor lobortis.</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Aliquet Interdum</h3>
+                                    </header>
+                                    <div>
+                                        <p>Aenean a mauris id nisi mollis dapibus sit amet vel nisl.</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Mauris Massa Leo</h3>
+                                    </header>
+                                    <div>
+                                        <p>Integer non est convallis, mattis neque id, varius eros. Vestibulum sed iaculis ligula.&nbsp;</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                            <div class="pd-grid-card-sm">
+                                <div class="pd-grid-card-sm-outer">
+                                    <header>
+                                        <h3>Dapibus Sit Amet</h3>
+                                    </header>
+                                    <div>
+                                        <p>Vivamus facilisis, arcu ac auctor lobortis, felis massa sodales purus.</p>
+                                    </div>
+                                    <footer><a href="#" name="anchor">View</a>
+                                    </footer>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <div class="pd-brand-side">
+                <img src="images/design-assets/logo_openflexure_emblem_pink.svg" alt="openflexure emblem" width="80" loading="lazy" height="50">
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-20</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-21</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-22</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
