Added in hero 17

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -713,8 +713,7 @@
                             <p class="pd-cards-11-headline"><strong>WordPress Solutions</strong></p>
                         </header>
                         <p class="pd-cards-11-leading-para">We know how many of our clients love WordPress so we&rsquo;ve worked hard to get the best high performance solutions for you.</p>
-                        <footer class="pd-cards-11-footer">
-                            <a href="#" name="anchor" class="mb-4 pd-cards-11-btn"><span></span>Explore WordPress</a>
+                        <footer class="pd-cards-11-footer"><a href="#" name="anchor" class="mb-4 pd-cards-11-btn"><span></span>Explore WordPress</a>
                             <div class="pd-cards-11-sub-cards-outer">
                                 <article class="mb-3 pd-cards-11-card text-start"><a href="#" name="anchor" class="mb-2 pd-cards-11-card-svg-link pt-2"><img alt="bricks builder logo" width="40" height="40" loading="lazy" src="images/design-assets/bricks-logo.svg"></a>
                                     <h3>Bricks</h3>
@@ -1121,8 +1120,7 @@
                             </div>
                         </div>
                         <div class="pd-cards-16-cards-outer">
-                            <article class="pd-cards-16-card">
-                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                            <article class="pd-cards-16-card"><a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
                                         <source srcset="images/uploads/cards-sample-1.webp" type="image/webp">
                                         <img src="/images/uploads/cards-sample-1.jpg" alt="image of an app" loading="lazy">
                                     </picture></a>
@@ -1135,8 +1133,7 @@
                                     <img src="images/uploads/logo-testimonial-example-1.svg" alt="example logo 1" width="130" height="130" loading="lazy">
                                 </div>
                             </article>
-                            <article class="pd-cards-16-card">
-                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                            <article class="pd-cards-16-card"><a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
                                         <source srcset="images/uploads/cards-sample-2.webp" type="image/webp">
                                         <img src="/images/uploads/cards-sample-2.jpg" alt="image of an app" loading="lazy">
                                     </picture></a>
@@ -1149,8 +1146,7 @@
                                     <img alt="example logo 1" width="130" src="images/uploads/logo-testimonial-example-2.svg" height="130" loading="lazy">
                                 </div>
                             </article>
-                            <article class="pd-cards-16-card">
-                                <a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
+                            <article class="pd-cards-16-card"><a href="#" name="anchor" class="pd-cards-16-img-link"><picture>
                                         <source srcset="images/uploads/cards-sample-3.webp" type="image/webp">
                                         <img src="/images/uploads/cards-sample-3.jpg" alt="image of an app" loading="lazy">
                                     </picture></a>
@@ -1355,8 +1351,7 @@
                 </div>
                 <div class="pt-4 row">
                     <div class="col-lg-6 d-flex flex-column pb-3">
-                        <article class="pd-cards-18-card-lg-outer">
-                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                        <article class="pd-cards-18-card-lg-outer"><a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
                                     <source srcset="/images/uploads/case-study-tanzania_result.webp" type="image/webp">
                                     <img src="images/uploads/case-study-tanzania_result.jpg" alt="tanazania case study" width="269" height="198" loading="lazy">
                                 </picture></a>
@@ -1372,8 +1367,7 @@
                         </article>                         
                     </div>
                     <div class="col-lg-6 d-flex flex-column pb-3">
-                        <article class="pd-cards-18-card-lg-outer">
-                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                        <article class="pd-cards-18-card-lg-outer"><a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
                                     <source srcset="/images/uploads/case-study-argentina_result.webp" type="image/webp">
                                     <img src="images/uploads/case-study-argentina_result.jpg" alt="plants growing" width="269" height="198" loading="lazy" aria-label="View article">
                                 </picture></a>
@@ -1389,8 +1383,7 @@
                         </article>                         
                     </div>
                     <div class="col-lg-6 d-flex flex-column pb-3">
-                        <article class="pd-cards-18-card-lg-outer">
-                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                        <article class="pd-cards-18-card-lg-outer"><a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
                                     <source srcset="/images/uploads/case-study-usa_result.webp" type="image/webp">
                                     <img src="images/uploads/case-study-usa_result.jpg" width="269" height="198" loading="lazy" alt="USA lab" aria-label="View article">
                                 </picture></a>
@@ -1406,8 +1399,7 @@
                         </article>                         
                     </div>
                     <div class="col-lg-6 d-flex flex-column pb-3">
-                        <article class="pd-cards-18-card-lg-outer">
-                            <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" aria-label="View article"> <picture>
+                        <article class="pd-cards-18-card-lg-outer"><a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" aria-label="View article"> <picture>
                                     <source srcset="/images/uploads/case-study-ireland_result.webp" type="image/webp">
                                     <img src="images/uploads/case-study-ireland_result.jpg" width="269" height="198" loading="lazy" alt="plastic on beach" aria-label="View article">
                                 </picture></a>
