--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -817,6 +817,85 @@ Focus on retaining candidates and clients.</strong></p>
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
             </div>
         </section>
+        <section class="pd-hero-17">
+            <script>
+                function imageLoadedListener17(e) {
+                    const heroImage17 = document.querySelector(".pd-hero-17-img");
+                    heroImage17.classList.add("pd-hero-17-image-loaded");
+                }
+            </script>
+            <div class="pd-hero-17-img-outer">
+                <picture>
+                    <source srcset="/images/uploads/lincoln-court-living-room-dressed_result.webp 1800w, 
+                                /images/uploads/lincoln-court-living-room-dressed_mobile_result.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/lincoln-court-living-room-dressed_result.jpg 1800w,
+                            /images/uploads/lincoln-court-living-room-dressed_result_mobile.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="images/uploads/lincoln-court-living-room-dressed_result.jpg" class="pd-hero-17-img pd-hero-17-image-loaded" onload="imageLoadedListener17()" loading="lazy" alt="image of apartment for rent in fairview oregon">
+                </picture>
+            </div>
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col">
+                        <div class="pd-hero-17-content-outer-outer">
+                            <div class="pd-hero-17-content-outer">
+                                <article class="pd-hero-17-notification-outer">
+                                    <div class="d-lg-none pd-hero-17-mobile-outer">
+                                        <p><strong>First month FREE!</strong> - <a href="#">View Specials</a></p>
+                                    </div>
+                                    <div class="d-lg-flex d-none pb-3 pb-lg-0 pd-hero-17-notification-header-body-outer">
+                                        <header class="pb-2 pb-lg-0 pd-hero-17-notification-header pe-2">
+                                            <p>Lease Special!</p>
+                                        </header>
+                                        <div class="pd-hero-17-notification-body pe-lg-2 ps-0 ps-lg-2">
+                                            <div>
+                                                <p><strong>Tour today</strong> - apply with 24 hours and pay no application fee. Get your first full month free!</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <footer class="d-lg-flex d-none pd-hero-17-notification-footer"><a href="#" name="anchor" class="pd-btn"><span><img src="images/design-assets/redeem_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="lease special icon" width="24" height="24" loading="lazy"></span>View Special</a>
+                                    </footer>
+                                </article>
+                                <div class="pd-hero-17-content-inner">
+                                    <header>
+                                        <div class="pd-intro-heading-sm">
+                                            <span><img src="images/design-assets/arrow_right_alt_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="arrow icon" width="18" height="18" loading="lazy"></span>
+                                            <h1 class="pd-intro-heading-sm">Apartments for rent in Fairview Oregon</h1>
+                                        </div>
+                                        <p class="pd-headline">Modern and Spacious</p>
+                                    </header>
+                                    <div class="d-none d-sm-block pd-subHeadline">
+                                        <p>Donec accumsan fringilla purus sit amet semper. Praesent iaculis nibh tortor, rhoncus efficitur ipsum viverra ut.</p>
+                                    </div>
+                                    <footer>
+                                        <a href="#" class="pd-btn"><span><img src="images/design-assets/search_check_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="24" height="24" loading="lazy"></span>View Available</a>
+                                        <a href="#" class="pd-btn"><span><img src="images/design-assets/calendar_clock_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="schedule a tour icon" width="24" height="24" loading="lazy"></span>Schedule a Tour</a>
+                                    </footer>
+                                </div>
+                                <address class="pd-address-phone-card-outer"><div class="pd-address-outer">
+                                        <a href="#"><span><img alt="mobile phone icon" width="18" height="18" loading="lazy" src="images/design-assets/distance_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg"></span>230 Lincoln St, <br class="pd-mobile-br">Fairview, OR 97024</a>
+                                    </div><div class="pd-phone-outer"><a href="tel:503-718-5600"><span><img alt="mobile phone icon" width="18" height="18" loading="lazy" src="images/design-assets/mobile_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg"></span>503-718-5600</a>
+                                    </div></address>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <script>
+
+function setViewportHeight() {
+    const vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+
+window.addEventListener('load', setViewportHeight);
+
+            </script>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-18</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
